--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,81 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Everywherejournal</title>
-  <%= stylesheet_link_tag    'application', media: 'all'%>
-  <%= javascript_include_tag 'application'%>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<%= yield %>
+    <title>Everywhere Journal</title>
 
-</body>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+    <div class="contain-to-grid sticky">
+      <nav class="top-bar" data-topbar role="navigation">
+        <ul class="title-area">
+          <li class="name">
+            <h1><%= link_to "Everywhere Journal", root_path %></h1>
+          </li>
+         <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+          <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+        </ul>
+
+      <section class="top-bar-section">
+        <!-- Right Nav Section -->
+        <ul class="right">
+          <li class="active"><a href="#"></a></li>
+          <li class="has-dropdown">
+          <% if current_user %>
+            <a href="#"><%= current_user.email %></a>
+          <% else %>
+            <a href="#">User</a>
+          <% end %>
+            <ul class="dropdown">
+            <% if user_signed_in? %>
+              <li><%= link_to "Edit Account Information", edit_user_registration_path %> </li>
+              <li><%= link_to "Sign out", destroy_user_session_path, data: {method: 'delete'} %></li>
+              <% else %>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+                <li><%= link_to "Create Account", new_user_registration_path %></li>
+            <% end %>
+            </ul>
+          </li>
+        </ul>
+
+        <!-- Left Nav Section -->
+          <ul class="left">
+            <li><%= link_to "Entries", "#" %></li>
+            <% if current_user %>
+              <li><%= link_to "New Entry", "#" %></li>
+            <% end %>
+
+            <li class="has-form">
+              <div class="row collapse">
+                <%= form_tag "#", method: 'get' do %>
+                  <div class="large-8 small-8 columns">
+                    <%= text_field_tag :search, params[:search], placeholder:"Find a court"%>
+                  </div>
+                  <div class="large-4 small-3 columns">
+                   <%= submit_tag "Search", :name => nil,  class: "search-button"%>
+                  </div>
+                <% end %>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </nav>
+    </div>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+     <div class="row">
+      <div class="small-12 columns">
+        <%= yield %>
+      </div>
+    </div>
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
